--- a/package.json
+++ b/package.json
@@ -1,39 +1,15 @@
 {
-    "name": "wget-improved",
-    "version": "1.5.0",
-    "description": "wget in nodejs, forked from wuchengwei/node-wget to add improvements and help maintain the project",
-    "keywords": [
-        "download",
-        "http",
-        "https",
-        "ftp",
-        "proxy",
-        "wget"
-    ],
-    "author": "Michael Barajas <michael.a.barajas@gmail.com>",
-    "repository": {
-        "type": "git",
-        "url": "git://github.com/bearjaws/node-wget.git"
-    },
-    "contributors": [
-        {
-            "name": "Michael Barajas"
-        }
-    ],
-    "homepage": "https://github.com/bearjaws/node-wget",
-    "bin": {
-        "nwget": "./bin/nwget"
-    },
-    "dependencies": {
-        "minimist": "1.2.0",
-        "tunnel": "0.0.2"
-    },
-    "engines": {
-        "node": ">= 0.6.18"
-    },
-    "license": "MIT",
-    "devDependencies": {
-        "chai": "^4.0.2",
-        "mocha": "^3.4.2"
-    }
+  "name": "wget-promise",
+  "version": "0.0.1",
+  "description": "wget in nodejs, returned in promise, forked from bearjaws/node-wget",
+  "author": "AJ Hsu <im.ajhsu@gmail.com>",
+  "license": "MIT",
+  "dependencies": {
+    "minimist": "1.2.0",
+    "tunnel": "0.0.2"
+  },
+  "devDependencies": {
+    "chai": "^4.0.2",
+    "mocha": "^3.4.2"
+  }
 }
