--- a/package.json
+++ b/package.json
@@ -18,10 +18,13 @@
     "tunnel": "0.0.2"
   },
   "devDependencies": {
+    "babel": "^5.8.38",
     "chai": "^4.0.2",
     "mocha": "^3.4.2"
   },
   "scripts": {
+    "build": "./node_modules/.bin/babel src -d build",
+    "pretest": "npm run build",
     "test": "./node_modules/.bin/mocha"
   }
 }
