--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "node-wget-promise",
-  "version": "0.0.8",
-  "description": "wget in Node with Promise support, forked from bearjaws/node-wget",
+  "version": "0.1.0",
+  "description":
+    "wget in Node, with Promise support",
   "author": "AJ Hsu <im.ajhsu@gmail.com>",
   "license": "MIT",
   "main": "build/index.js",
