Update package keywords

--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "node-wget-promise",
   "version": "0.1.1",
-  "description":
-    "wget in Node, with Promise support",
+  "description": "wget in Node, with Promise support",
+  "keywords": ["wget", "download", "http", "request", "promise"],
   "author": "AJ Hsu <im.ajhsu@gmail.com>",
   "license": "MIT",
   "main": "build/index.js",
