--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
   },
   "dependencies": {},
   "devDependencies": {
-    "jest": "^23.2.0"
+    "jest": "^24.5.0"
+  },
+  "engines": {
+    "node": ">=6"
   }
 }
